[~] Clean Code